2008-03-17 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomaticrip.c, options.c: Moved buildcommandline() and
	append_*_section() to options.c, where they belong.
	* foomaticrip.c, spooler.c: Moved some spooler specific stuff to spooler.c
	to clean up foomaticrip.c some more.

2008-03-16 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomaticrip.c: Started to move all process forking to process.c - to
	  share it with the pdf handler. Furthermore, the functions in process.c
	  will keep track of all forked processes and kill them when foomatic-rip
	  reveives a SIGTERM.

2008-03-08 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Accept custom page sizes without a unit (assume pt)

2008-03-04 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomatic-rip.c, options.c: Use default values for custom options with
	  wrong parameters (e.g. PageSize=Custom) - Ubuntu bug #196687

2008-03-03 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomatic-rip.c: Fixed minor bug in option parsing
	* pdf.cc/pdf.h: Beginning of pdf printing support. Printing is done
	  via ghostscript, using the commandline in the ppd file that is already
	  used for rendering postscript.

2008-01-26 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomatic-rip: Fixed minor bugs found while testing foomatic-rip
	  with cups.

2008-01-22 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomatic-rip: Merged foomatic-gswrapper into foomatic-rip.
	* *: Fixed 'make install'

2008-01-14 Lars Uebernickel <larsuebernickel@gmx.de>
	* *: Added support for CUPS custom options
	  (see http://www.cups.org/documentation.php/spec-ppd.html#OPTIONS)
	   o PPD files can contain both CUPS and foomatic custom options
	   o Custom options can be set like this on the command line:
	   		Options with a single parameter:
	   			-o optionname=Custom.value  or
	   		    -o optionname=value
	   		Options with multiple parameters:
	   		    -o optionname={param1=value1 param2=value2 ...}
